[gd_scene load_steps=11 format=2]

[ext_resource path="res://CameraReference.gd" type="Script" id=2]
[ext_resource path="res://OceanShader.tres" type="Material" id=3]
[ext_resource path="res://Ocean.gd" type="Script" id=4]
[ext_resource path="res://Panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ReferencePlane.gd" type="Script" id=7]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0.0705882, 0.776471, 0.0627451, 0.282353 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 8, 0.01, 6 )

[sub_resource type="PrismMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.847059, 0.870588, 0.0862745, 1 )

[sub_resource type="ArrayMesh" id=5]

[node name="Node" type="Node"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 46.4912, 0 )
directional_shadow_max_distance = 200.0

[node name="Ocean" type="ImmediateGeometry" parent="."]
material_override = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Panel" parent="." instance=ExtResource( 5 )]
margin_bottom = -5.0

[node name="RefPlane2" type="MeshInstance" parent="."]
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="BuoyancyForce" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, -1, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="ReferencePlane" type="MeshInstance" parent="."]
mesh = SubResource( 5 )
script = ExtResource( 7 )

[node name="DebugLabel" type="Label" parent="."]
margin_left = 400.593
margin_top = 3.77977
margin_right = 440.593
margin_bottom = 26.7798
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraReference" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="CameraReference2" type="Spatial" parent="CameraReference"]

[node name="Camera" type="Camera" parent="CameraReference/CameraReference2"]
transform = Transform( 1, 0, 0, 0, 0.962843, 0.270063, 0, -0.270063, 0.962843, 0, 4, 10 )
current = true
